--- a/config/crd/bases/core.opni.io_loggingclusters.yaml
+++ b/config/crd/bases/core.opni.io_loggingclusters.yaml
@@ -3,7 +3,7 @@ apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.8.1-0.20220428122951-32ad71090a62
+    controller-gen.kubebuilder.io/version: v0.11.3
   creationTimestamp: null
   name: loggingclusters.core.opni.io
 spec:
@@ -43,6 +43,7 @@ spec:
                   name:
                     type: string
                 type: object
+                x-kubernetes-map-type: atomic
               lastSync:
                 format: date-time
                 type: string
