--- a/config/crd/bases/core.opni.io_natsclusters.yaml
+++ b/config/crd/bases/core.opni.io_natsclusters.yaml
@@ -3,7 +3,7 @@ apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.8.1-0.20220428122951-32ad71090a62
+    controller-gen.kubebuilder.io/version: v0.11.3
   creationTimestamp: null
   name: natsclusters.core.opni.io
 spec:
@@ -90,6 +90,7 @@ spec:
                 required:
                 - key
                 type: object
+                x-kubernetes-map-type: atomic
               replicas:
                 format: int32
                 type: integer
@@ -125,6 +126,7 @@ spec:
                 required:
                 - key
                 type: object
+                x-kubernetes-map-type: atomic
               nkeyUser:
                 type: string
               replicas:
