--- a/config/crd/bases/logging.opni.io_multiclusterusers.yaml
+++ b/config/crd/bases/logging.opni.io_multiclusterusers.yaml
@@ -3,7 +3,7 @@ apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.8.1-0.20220428122951-32ad71090a62
+    controller-gen.kubebuilder.io/version: v0.11.3
   creationTimestamp: null
   name: multiclusterusers.logging.opni.io
 spec:
