--- a/config/crd/kustomization.yaml
+++ b/config/crd/kustomization.yaml
@@ -33,6 +33,7 @@ resources:
 - bases/logging.opni.io_multiclusterrolebindings.yaml
 - bases/logging.opni.io_multiclusterusers.yaml
 - bases/logging.opni.io_opniopensearches.yaml
+- bases/logging.opni.io_collectorconfigs.yaml
 - bases/monitoring.opni.io_rolebindings.yaml
 - bases/monitoring.opni.io_roles.yaml
 # +kubebuilder:scaffold:crdkustomizeresource
