--- a/config/agent-crd/kustomization.yaml
+++ b/config/agent-crd/kustomization.yaml
@@ -16,6 +16,7 @@ resources:
 - bases/logging.opni.io_datapreppers.yaml
 - bases/core.opni.io_bootstraptokens.yaml
 - bases/core.opni.io_keyrings.yaml
+- bases/core.opni.io_collectors.yaml
 # +kubebuilder:scaffold:crdkustomizeresource
 
 # the following config is for teaching kustomize how to do kustomization for CRDs.
