--- a/config/crd/kustomization.yaml
+++ b/config/crd/kustomization.yaml
@@ -27,6 +27,7 @@ resources:
 - bases/core.opni.io_loggingclusters.yaml
 - bases/core.opni.io_monitoringclusters.yaml
 - bases/core.opni.io_natsclusters.yaml
+- bases/core.opni.io_collectors.yaml
 - bases/logging.opni.io_datapreppers.yaml
 - bases/logging.opni.io_logadapters.yaml
 - bases/logging.opni.io_loggingclusterbindings.yaml
