Config update for later version and bugfixes

--- a/packages/opni-agent/opni-agent/charts/templates/rbac_v2.yaml
+++ b/packages/opni-agent/opni-agent/charts/templates/rbac_v2.yaml
@@ -38,6 +38,12 @@ rules:
   verbs:
   - "*"
 - apiGroups:
+  - core.opni.io
+  resources:
+  - "*"
+  verbs:
+  - "*"
+- apiGroups:
   - apps
   resources:
   - daemonsets
