Add controller and tests

--- a/config/crd/bases/logging.opni.io_preprocessors.yaml
+++ b/config/crd/bases/logging.opni.io_preprocessors.yaml
@@ -47,7 +47,10 @@ spec:
                     type: string
                 type: object
               replicas:
+                format: int32
                 type: integer
+              writeIndex:
+                type: string
             type: object
           status:
             properties:
