Standardize and fix up otel log shipping

--- a/config/crd/kustomization.yaml
+++ b/config/crd/kustomization.yaml
@@ -37,6 +37,7 @@ resources:
 - bases/logging.opni.io_collectorconfigs.yaml
 - bases/monitoring.opni.io_rolebindings.yaml
 - bases/monitoring.opni.io_roles.yaml
+- bases/logging.opni.io_preprocessors.yaml
 # +kubebuilder:scaffold:crdkustomizeresource
 
 patchesStrategicMerge:
